--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
+/.idea
 .pnp.js
 
 # testing
@@ -23,3 +24,4 @@ yarn-debug.log*
 yarn-error.log*
 debug.log
 .eslintcache
+
